Simplification (#3)
* java 8 + simplification

* generalization and optimization

* accurate text generation